# wx-publish-gateway

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
skills/mp-draft-push/: SKILL.md  scripts.sh
skills/mp-draft-push/references/: api-limitations.md  cover-fallback-recipe.md  proxy-configuration.md  scripts-location.md  wechat-api-errors.md  wechat-article-api-overview.md
skills/mp-draft-push/scripts/: md_to_wechat_html.py
tests/: test_auth.py  test_client.py  test_config.py  test_endpoints.py
wx_publish_gateway/: auth.py  client.py  config.py  main.py
